--- a/views/backend/pro.phtml
+++ b/views/backend/pro.phtml
@@ -15,28 +15,31 @@ Frequent Contributors - CMDM-frequent-contributors  Cat="category-name" sort="As
 Downloads List- CMDM-downloads-list Cat="category-name" sort="Asc/Desc" count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM98.png" target="new">View Image</a>)<br><br />
 Related Downloads - CMDM-related-downloads  Cat="category-name" sort="Asc/Desc" count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM97.png" target="new">View Image</a>)<br>
 </li>
-<li><strong>View Restriction</strong>- Define per each download if it is open to non logged in users. If only logged in user are allowed also define which user roles can view download. This can be set by Admin or Admin can give user ability to define (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM91.png">View image</a>) </Li>
-<li><strong>Password Protection</strong>- Protect download with password (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-33-08.jpg">View Image</a>), (<a href="http://www.cminds.com/cmdownloads/cm-downloads-pro/" target="_blank">View Demo</a>)</li>
+<li><strong>View Restriction</strong>- Define per each download if it is open to non-logged in users. If only logged in user are allowed, you can also define which user roles can view specific downloads. This can be set by Admin or Admin can give the user ability to define  (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM91.png">View image</a>) </Li>
+<li><strong>Password Protection</strong>- Protect downloads with passwords (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-33-08.jpg">View Image</a>), (<a href="http://www.cminds.com/cmdownloads/cm-downloads-pro/" target="_blank">View Demo</a>)</li>
 <li><strong>Upload Restrictions</strong>- Define which user roles can create new downloads (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-39-35.jpg">View Image</a>)</Li>
 <li><strong>URL / Shortcode</strong>- Allow to include URL or shortcode in download page instead of uploading a file. This is useful for integration with other plugins and support checkout carts and selling downloads. (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-41-44.jpg">Example of EDD integration</a>) , (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-44-14.jpg">Example of User Selection</a>), (<a href="http://www.cminds.com/cmdownloads/cm-answers-pro/" target="_blank">View Demo</a>)</Li>
-<li><strong>Related Downloads</strong>- Show Related downloads in download page (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-45-53.jpg">View Image</a>), (<a href="http://www.cminds.com/cmdownloads/cm-answers-pro/" target="_blank">View Demo</a>)</li>
+<li><strong>Related Downloads</strong>- Show Related downloads on the download page (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-45-53.jpg">View Image</a>), (<a href="http://www.cminds.com/cmdownloads/cm-answers-pro/" target="_blank">View Demo</a>)</li>
 <li><strong>Downloads Page Tabs</strong>- Show more tabs for download descriptions in download page, (<a href="http://www.cminds.com/cmdownloads/cm-answers-pro/" target="_blank">View Demo</a>)</Li>
 <li><strong>Search</strong>- Filter search results by date, downloads and username&nbsp;(<a href="http://www.cminds.com/cmdownloads/" target="_blank">View Demo</a>)</li>
 <li><strong>Moderate User Comments</strong>- Admin can moderate user comments (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-47-33.jpg">View Image</a>)</li>
 <li><strong>Auto-approve comments and answers from users</strong>- Admin can define a list of users which do not need moderation (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-47-33.jpg">View Image</a>)</li>
 <li><strong>Multisite</strong>- Supports multisite</li>
-<li><strong>Public User Profile</strong>- Automatically generate a public profile page containing the downloads user posted with link to his social media profile (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-49-22.jpg">View Image</a>)</li>
+<li><strong>Public User Profile</strong>- Automatically generate a public profile page containing the downloads each user has posted with link to his social media profile (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-49-22.jpg">View Image</a>)</li>
 <li><strong>Gravatar</strong> - Ability to show Gravatar near user name and in user profile (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-49-22.jpg">View Image</a>)</li>
-<li><strong>Order Comments</strong> - Show comments in download page in ascending or descending order</li>
+<li><strong>Order Comments</strong> - Show comments in download page in ascending or descending order (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99H.png">Image from Settings</a>)</li>
 <li><strong>Localization Support</strong> - Forntend (user side) is localized</li>
-<li><strong>View Count</strong> - Show view count in each download page and Control how view count is done (by view or by session)</li>
+<li><strong>View Count</strong> - Show view count for each download and Control how view count is done and what is the initial number it starts at (by view or by session) (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99F.png">Image from Settings</a>), (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99G.png">Image from Downloads edit screen</a>)</li>
 <li><strong>Gratitude Message</strong> - Does not include Gratitude message in the footer.</li>
-<li><strong>Permalinks</strong> - Ability to change permalink from /cmdownloads to user defined.</li>
-<li><strong>Support and Tabs control</strong> - Ability to remove support forum and also other tabs from download page.</li>
-<li><strong>Slide Show</strong> - Ability to turn off slide show.</li>
-<li><strong>Disclaimer</strong> - Add option to show disclaimer for first time users.</li>
+<li><strong>Permalinks</strong> - Ability to change permalink from /cmdownloads to user defined. (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99E.png">Image from Settings</a>)</li>
+<li><strong>Support and Tabs control</strong> - Ability to remove support forum and also other tabs from download page. (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99D.png">Image from Settings</a>)</li>
+<li><strong>Slide Show</strong> - Ability to turn off slide show. (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99C.png">Image from Settings</a>)</li>
+<li><strong>Disclaimer</strong> - Add an option to show disclaimer for first time users.  (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99A.png">Image from Settings</a>),  (<a href="http://downloadsmanager.cminds.com//wp-content/uploads/edd/Downloads99B.png">Image from site</a>)</li>
 <li><strong>External Viewer</strong> - Added external link to Google Docs viewer for supported Google Docs document types .  (<a href="http://www.cminds.com/cmdownloads/pdf-file-preview-example/">View Demo</a>)</li>
 <li><strong>MP3 Viewer</strong> - Added embedded mp3 player for music files. (<a href="http://www.cminds.com/cmdownloads/mp3-audio-example/">View Demo</a>)</li>
+<li><strong>Downloads Index Views</strong> - Option to toggle between list view and tiles view. (<a href="http://www.cminds.com/cmdownloads/">View Demo</a>)</li>
+<li><strong>Social Share</strong> – Includes a social share widget in the question page (<a href="http://www.cminds.com/cmdownloads/mp3-audio-example/">View Demo - Widget on the right</a>)</li>
+
 </ul>
 
 <h1><strong>Purchase </strong></h1>
