--- a/views/frontend/cmdownload/single.phtml
+++ b/views/frontend/cmdownload/single.phtml
@@ -1,12 +1,12 @@
 <?php
-if (!isset($_GET['ajax'])):
-get_header();
+if(!isset($_GET['ajax'])):
+    get_header();
 endif;
 ?><div class="CMDM"><?php
-if (have_posts()):
-    while (have_posts()):
+if(have_posts()):
+    while(have_posts()):
         the_post();
-        $download = CMDM_GroupDownloadPage::getInstance(get_the_id());
+        $download    = CMDM_GroupDownloadPage::getInstance(get_the_id());
         ?>
             <div class="CMDM-app">
                 <div class="rating"><?php do_action('CMDM_show_rating', get_the_id()); ?></div>
@@ -15,91 +15,65 @@ if (have_posts()):
                 <!--/h2 -->
                 <div class="aside">
                     <?php do_action('CMDM_show_details', get_the_id()); ?>
-                    <!--/sideBox --> 
+                    <!--/sideBox -->
                     <?php do_action('CMDM_show_download_button', get_the_id()); ?>
-                    <!--/sideBox --> 
+                    <!--/sideBox -->
                     <?php dynamic_sidebar('cm-download-manager-sidebar'); ?>
                 </div>
                 <!--/aside -->
                 <div class="main">
                     <?php
                     $screenshots = CMDM_get_screenshots();
-                        ?>
-                        <div class="searchResItems">
-                            <div class="scrollable">
-                                <div class="items">
-                                    <?php 
-                                    if (!empty($screenshots)):
-                                    foreach ($screenshots as $screenshot): ?>
+                    ?>
+                    <div class="searchResItems">
+                        <div class="scrollable">
+                            <div class="items">
+                                <?php
+                                if(!empty($screenshots)):
+                                    foreach($screenshots as $screenshot):
+                                        ?>
                                         <div> <img src="<?php echo CMDM_get_url('cmdownload', 'screenshot', array('size' => '720x220', 'img' => $screenshot)); ?>" height="220" /> </div>
-            <?php endforeach; 
-            else:
-                ?>
-                     <div> <img src="<?php echo CMDM_get_default_screenshot(); ?>" height="220" width="720" /> </div>                   
-                <?php
-            endif;
-            ?>
-                                </div>
+                                        <?php
+                                    endforeach;
+                                else:
+                                    ?>
+                                    <div> <img src="<?php echo CMDM_get_default_screenshot(); ?>" height="220" width="720" /> </div>
+                                <?php
+                                endif;
+                                ?>
                             </div>
-                            <!--/scrollable -->
-                            <div class="paging"><a href="javascript:void(0)" class="prev browse left">&laquo;</a>
-                                <div class="navi"></div>
-                                <a href="javascript:void(0)" class="next browse right">&raquo;</a></div>
-                            <!--/paging --> 
                         </div>
+                        <!--/scrollable -->
+                        <div class="paging"><a href="javascript:void(0)" class="prev browse left">&laquo;</a>
+                            <div class="navi"></div>
+                            <a href="javascript:void(0)" class="next browse right">&raquo;</a></div>
+                        <!--/paging -->
+                    </div>
                     <!--/searchResItems -->
                     <ul class="tabNav">
                         <li class="on"><a href="#description"><?php _e('Description', 'cm-download-manager'); ?></a></li>
-                        <li><a href="#support"><?php _e('Support', 'cm-download-manager'); ?></a></li> 
+                        <li><a href="#support"><?php _e('Support', 'cm-download-manager'); ?></a></li>
                     </ul>
                     <div class="boxGrey724">
                         <div class="tabItem">
-        <?php the_content(); ?>
+                            <?php the_content(); ?>
 
                         </div>
                         <div class="tabItem tabItemSupport"><?php do_action('CMDM_show_support', get_the_id()); ?></div>
                     </div>
 
-                    <!--/boxGrey724 --> 
+                    <!--/boxGrey724 -->
                 </div>
-                <!--/main --> 
+                <!--/main -->
             </div>
-            <!-- javascript coding --> 
-            <script src="http://cdn.jquerytools.org/1.2.7/full/jquery.tools.min.js"></script> 
-            <script>
-    $(function() {
-        // initialize scrollable
-        $(".scrollable").scrollable({circular: true}).navigator().autoscroll({
-            interval: 5000
-        });
-    });
-    jQuery(document).ready(function($) {
-        var q = window.location.hash.substring(1);
-        $('a[href="#'+q+'"]').trigger('click');
-    });
-    window.onhashchange = function() {
-        var q = window.location.hash.substring(1);
-        jQuery('a[href="#'+q+'"]').trigger('click');
-    };
-    ////////////
-    $(".tabNav li a").click(function() {
-        var tabIndex = $(this).parent("li").index();
-        //console.log(tabIndex);
-        $(".tabNav li").removeClass("on");
-        $(this).parent("li").addClass("on");
-        $(".tabItem").hide()
-        $(".tabItem").eq(tabIndex).show();
-    });
-    $(".tabNav li a:first").trigger('click');
-
-
-</script>
+            <!-- javascript coding -->
             <?php
         endwhile;
     endif;
     ?>
-<span class="cma_poweredby"><a href="http://plugins.cminds.com/" target="_new" class="cma_poweredbylink">CreativeMinds WordPress Plugins</a> <a href="http://downloadsmanager.cminds.com" target="_new" class="cma_poweredbylink">CM Downloads Manager</a></span>
+    <span class="cma_poweredby">
+        <a href="http://plugins.cminds.com/" target="_blank" class="cma_poweredbylink">CreativeMinds WordPress Plugins</a>
+        <a href="http://downloadsmanager.cminds.com" target="_blank" class="cma_poweredbylink">CM Downloads Manager</a>
+    </span>
 </div><?php
-if (!isset($_GET['ajax']))
-get_footer();
-?>
+if(!isset($_GET['ajax'])) get_footer();
