--- a/views/backend/settings.phtml
+++ b/views/backend/settings.phtml
@@ -1,20 +1,20 @@
-<p class="clear">
-<?php
-if (!empty($messages)):
-    foreach ($messages as $message):
-        ?><div class="updated"><p><?php echo $message; ?></p></div><?php
-    endforeach;
-endif;
-?>
-<h3>Upgrade to Pro</h3>
-<table>
-	<tr>
-    <td style="min-width:200px;"><strong>Pro Version</strong></td>
- 	<td style="min-width:200px;"><p><strong><a href="http://downloadsmanager.cminds.com" target="new">Upgrade</a></p></td>
-    <td bgcolor="#CCFFCC"> Professional version of CM Downloads which gives the admin better tools to customize the Downloads system behavior, adding login support from social networks, password protection and a lot more</td>
-	</tr>
-	</table>
-        <form method="post" enctype="multipart/form-data">
+<div class="clear">
+    <?php
+    if(!empty($messages)):
+        foreach($messages as $message):
+            ?><div class="updated"><p><?php echo $message; ?></p></div><?php
+        endforeach;
+    endif;
+    ?>
+    <h3>Upgrade to Pro</h3>
+    <table>
+        <tr>
+            <td style="min-width:200px;"><strong>Pro Version</strong></td>
+            <td style="min-width:200px;"><p><strong><a href="http://downloadsmanager.cminds.com" target="new">Upgrade</a></p></td>
+            <td bgcolor="#CCFFCC"> Professional version of CM Downloads which gives the admin better tools to customize the Downloads system behavior, adding login support from social networks, password protection and a lot more</td>
+        </tr>
+    </table>
+    <form method="post" enctype="multipart/form-data">
         <h3>General Settings:</h3>
         <table>
             <tr valign="top">
@@ -23,37 +23,37 @@ endif;
             </tr>
             <tr valign="top">
                 <th scope="row" valign="middle" align="left" >Search placeholder text:</th>
-                <td ><input type="text" size="60" name="search_placeholder_text" value="<?php echo esc_attr($searchPlaceholder);?>" /></td>
-            </tr>
-                        <tr valign="top">
-                <th scope="row" valign="middle" align="left" >Allowed file extensions (separate with comma):</th>
-                <td ><input type="text" size="60" name="allowed_extensions" value="<?php echo esc_attr(implode(',', $allowed_extensions));?>" /></td>
+                <td ><input type="text" size="60" name="search_placeholder_text" value="<?php echo esc_attr($searchPlaceholder); ?>" /></td>
             </tr>
             <tr valign="top">
-<th scope="row" align="left">"No screenshot" image:</th>
-<td><label for="upload_default_screenshot">
+                <th scope="row" valign="middle" align="left" >Allowed file extensions (separate with comma):</th>
+                <td ><input type="text" size="60" name="allowed_extensions" value="<?php echo esc_attr(implode(',', $allowed_extensions)); ?>" /></td>
+            </tr>
+            <tr valign="top">
+                <th scope="row" align="left">"No screenshot" image:</th>
+                <td><label for="upload_default_screenshot">
 
-<input id="upload_default_screenshot" type="text" size="60" name="upload_default_screenshot" value="<?php echo esc_attr($default_screenshot); ?>" />
-<input id="upload_default_screenshot_button" type="button" value="Upload Image" />
-<br />Enter an URL or upload an image (Size: H: 220px W: 720px)<br />
-        <img id="upload_default_screenshot_img" src="<?php echo esc_url($default_screenshot); ?>" width="720" height="220" />
-</label></td>
-</tr>
+                        <input id="upload_default_screenshot" type="text" size="60" name="upload_default_screenshot" value="<?php echo esc_attr($default_screenshot); ?>" />
+                        <input id="upload_default_screenshot_button" type="button" value="Upload Image" />
+                        <br />Enter an URL or upload an image (Size: H: 220px W: 720px)<br />
+                        <img id="upload_default_screenshot_img" src="<?php echo esc_url($default_screenshot); ?>" width="720" height="220" />
+                    </label></td>
+            </tr>
             <tr valign="top">
                 <th scope="row" valign="middle" align="left" >Add "Downloads" (<a href="<?php echo home_url('/cmdownloads/'); ?>">/cmdownloads</a>) to site menu?:</th>
-                <td ><input type="checkbox" name="add_addons_menu" value="1" <?php checked($add_addons_menu); ?>/></td>
+                <td ><input type="checkbox" name="add_addons_menu" value="1" <?php checked($add_addons_menu); ?>/><strong>Warning! You need to have "wp_nav_menu" trigger in your template</strong></td>
             </tr>
             <tr valign="top">
                 <th scope="row" valign="middle" align="left" >Add "My Downloads" (<a href="<?php echo home_url('/cmdownload/dashboard/'); ?>">/cmdownload/dashboard</a>) to site menu?:</th>
-                <td ><input type="checkbox" name="add_dashboard_menu" value="1" <?php checked($add_dashboard_menu); ?>/></td>
+                <td ><input type="checkbox" name="add_dashboard_menu" value="1" <?php checked($add_dashboard_menu); ?>/><strong>Warning! You need to have "wp_nav_menu" trigger in your template</strong></td>
             </tr>
-          
+
         </table>
         <h3>Notification Settings:</h3>
         <table>
             <tr valign="top">
                 <th scope="row" valign="middle" align="left" >New topic notification title:</th>
-                <td ><input type="text" size="60" name="<?php echo CMDM_SupportThread::OPTION_NEW_THREAD_NOTIFICATION_TITLE; ?>" value="<?php echo esc_attr($threadNewNotificationTitle);?>" /></td>
+                <td ><input type="text" size="60" name="<?php echo CMDM_SupportThread::OPTION_NEW_THREAD_NOTIFICATION_TITLE; ?>" value="<?php echo esc_attr($threadNewNotificationTitle); ?>" /></td>
             </tr>
             <tr valign="top">
                 <th scope="row" valign="top" align="left" >New topic notification message:</th>
@@ -61,23 +61,23 @@ endif;
             </tr>
             <tr valign="top">
                 <th scope="row" valign="middle" align="left" >Topic comment notification title:</th>
-                <td ><input type="text" size="60" name="<?php echo CMDM_SupportThread::OPTION_THREAD_NOTIFICATION_TITLE; ?>" value="<?php echo esc_attr($threadNotificationTitle);?>" /></td>
+                <td ><input type="text" size="60" name="<?php echo CMDM_SupportThread::OPTION_THREAD_NOTIFICATION_TITLE; ?>" value="<?php echo esc_attr($threadNotificationTitle); ?>" /></td>
             </tr>
             <tr valign="top">
                 <th scope="row" valign="top" align="left" >Topic comment notification message:</th>
                 <td ><textarea cols="60" rows="5" name="<?php echo CMDM_SupportThread::OPTION_THREAD_NOTIFICATION; ?>"><?php echo $threadNotification; ?></textarea></td>
             </tr>
         </table>
-<h3>Panel Titles:</h3>
+        <h3>Panel Titles:</h3>
 
-    <table>
-<?php foreach (self::$_titles as $key => $value): ?>
-            <tr valign="top">
-                <th scope="row" valign="middle" align="left" style="border-bottom:solid 1px #ccc"><?php echo $key; ?></th>
-                <td style="border-bottom:solid 1px #ccc"><input type="text" size="60" name="titles[<?php echo esc_attr($key); ?>]" value="<?php echo esc_attr($value); ?>" /></td>
-            </tr><?php endforeach; ?>
-    </table>
-    
-    <input type="submit" class="button" value="Update" />
-</form>
-</p>
+        <table>
+            <?php foreach(self::$_titles as $key => $value): ?>
+                <tr valign="top">
+                    <th scope="row" valign="middle" align="left" style="border-bottom:solid 1px #ccc"><?php echo $key; ?></th>
+                    <td style="border-bottom:solid 1px #ccc"><input type="text" size="60" name="titles[<?php echo esc_attr($key); ?>]" value="<?php echo esc_attr($value); ?>" /></td>
+                </tr><?php endforeach; ?>
+        </table>
+
+        <input type="submit" class="button" value="Update" />
+    </form>
+</div>
