--- a/views/backend/about.phtml
+++ b/views/backend/about.phtml
@@ -7,33 +7,33 @@
  * @package Glossary/View
  */
 ?>
-<p class="clear">
-<br />
+<div class="clear">
+    <br />
 
-This plugin was developed by <a href="http://plugins.cminds.com/" target="new">CreativeMinds</a>. You can find more information about CM Download <a href="http://downloadsmanager.cminds.com/" target="new">here</a>
-<br /><br />
-<h3>Premium Plugins by CreativeMinds</h3>
-<ul>
-<li><a href="http://tooltip.cminds.com/" target="new">CM Enhanced ToolTip Glossary Pro</a> - Parses posts for defined glossary terms and adds links to the static glossary page containing the definition and a tooltip with the definition.</li> 
-<li><a href="http://answers.cminds.com/" target="new">CM Answers Pro</a> - Allow users to post questions and answers in stackoverflow style.</li>
-<li><a href="http://http://downloadsmanager.cminds.com/" target="new">CM Download Manager Pro</a> - Allow users to upload and manage Downloads in a directory structure for others users to use and comment.</li>
-</ul>
-<h3>Free Plugins by CreativeMinds</h3>
-<ul>
-<li><a href="http://wordpress.org/extend/plugins/enhanced-tooltipglossary/" target="new">CM Enhanced ToolTip Glossary</a> - Parses posts for defined glossary terms and adds links to the static glossary page containing the definition and a tooltip with the definition.</li> 
-<li><a href="http://wordpress.org/extend/plugins/cm-answers/" target="new">CM Answers</a> - Allow users to post questions and answers in stackoverflow style.</li>
-<li><a href="http://wordpress.org/extend/plugins/cm-download-manager" target="new">CM Download Manager</a> - Allow users to upload and manage Downloads in a directory structure for others users to use and comment.</li>
-<li><a href="http://wordpress.org/extend/plugins/multi-mailchimp-list-manager/" target="new">CM Multi MailChimp List Manager</a> - Allows users to subscribe/unsubscribe from multiple MailChimp lists. </li>
-<li><a href="http://wordpress.org/extend/plugins/cm-invitation-codes/" target="new">CM Invitation Codes</a> - Allows more control over site registration by adding managed groups of invitation codes.</li>
-<li><a href="http://wordpress.org/extend/plugins/cm-email-blacklist/" target="new">CM Email Blacklist</a> - Block users from blacklists domain from registering to your WordPress site.</li>
-</ul>
-<br />
-<h3>We Are Experts in Custom Plugin Development</h3>
-<ul>
-<li><strong>Professional Quality Work </strong>- We follow a detailed coding standard that ensures we deliver only the highest quality products and services. You can count on maintainable code that fulfills your requirements completely.</li><br>
-<li><strong>Expert Knowledge </strong>- Custom WordPress plugins are our specialty. We devote a lot of work and time for testing to deliver to our customers bug free products. We use WP custom functions and we excel in PHP / SQL / JavaScript and related technologies like JQuery or Ajax</li><br>
-<li><strong>Integration with 3rd-party Plugins</strong>- Upon request we integrate our plugins with external 3-rd party tools and services such as GoToMeeting, Vimeo, Google and many others.</li><br>
-<li><strong>Fixed Price Quotes </strong>- We provide fixed price quotes so you know exactly what your total and final development cost will be.</li><br>
-<li><strong>Support and Warranty </strong>- Once your plugin is completed we will not leave you out in the cold. We believe that your success is our success and we want happy customers who will use our products again. </li>
-</ul>
-</p>
+    This plugin was developed by <a href="http://plugins.cminds.com/" target="new">CreativeMinds</a>. You can find more information about CM Download <a href="http://downloadsmanager.cminds.com/" target="new">here</a>
+    <br /><br />
+    <h3>Premium Plugins by CreativeMinds</h3>
+    <ul>
+        <li><a href="http://tooltip.cminds.com/" target="new">CM Enhanced ToolTip Glossary Pro</a> - Parses posts for defined glossary terms and adds links to the static glossary page containing the definition and a tooltip with the definition.</li>
+        <li><a href="http://answers.cminds.com/" target="new">CM Answers Pro</a> - Allow users to post questions and answers in stackoverflow style.</li>
+        <li><a href="http://http://downloadsmanager.cminds.com/" target="new">CM Download Manager Pro</a> - Allow users to upload and manage Downloads in a directory structure for others users to use and comment.</li>
+    </ul>
+    <h3>Free Plugins by CreativeMinds</h3>
+    <ul>
+        <li><a href="http://wordpress.org/extend/plugins/enhanced-tooltipglossary/" target="new">CM Enhanced ToolTip Glossary</a> - Parses posts for defined glossary terms and adds links to the static glossary page containing the definition and a tooltip with the definition.</li>
+        <li><a href="http://wordpress.org/extend/plugins/cm-answers/" target="new">CM Answers</a> - Allow users to post questions and answers in stackoverflow style.</li>
+        <li><a href="http://wordpress.org/extend/plugins/cm-download-manager" target="new">CM Download Manager</a> - Allow users to upload and manage Downloads in a directory structure for others users to use and comment.</li>
+        <li><a href="http://wordpress.org/extend/plugins/multi-mailchimp-list-manager/" target="new">CM Multi MailChimp List Manager</a> - Allows users to subscribe/unsubscribe from multiple MailChimp lists. </li>
+        <li><a href="http://wordpress.org/extend/plugins/cm-invitation-codes/" target="new">CM Invitation Codes</a> - Allows more control over site registration by adding managed groups of invitation codes.</li>
+        <li><a href="http://wordpress.org/extend/plugins/cm-email-blacklist/" target="new">CM Email Blacklist</a> - Block users from blacklists domain from registering to your WordPress site.</li>
+    </ul>
+    <br />
+    <h3>We Are Experts in Custom Plugin Development</h3>
+    <ul>
+        <li><strong>Professional Quality Work </strong>- We follow a detailed coding standard that ensures we deliver only the highest quality products and services. You can count on maintainable code that fulfills your requirements completely.</li><br>
+        <li><strong>Expert Knowledge </strong>- Custom WordPress plugins are our specialty. We devote a lot of work and time for testing to deliver to our customers bug free products. We use WP custom functions and we excel in PHP / SQL / JavaScript and related technologies like JQuery or Ajax</li><br>
+        <li><strong>Integration with 3rd-party Plugins</strong>- Upon request we integrate our plugins with external 3-rd party tools and services such as GoToMeeting, Vimeo, Google and many others.</li><br>
+        <li><strong>Fixed Price Quotes </strong>- We provide fixed price quotes so you know exactly what your total and final development cost will be.</li><br>
+        <li><strong>Support and Warranty </strong>- Once your plugin is completed we will not leave you out in the cold. We believe that your success is our success and we want happy customers who will use our products again. </li>
+    </ul>
+</div>
