--- a/views/backend/about.phtml
+++ b/views/backend/about.phtml
@@ -12,22 +12,25 @@
 
     This plugin was developed by <a href="http://plugins.cminds.com/" target="new">CreativeMinds</a>. You can find more information about CM Download <a href="http://downloadsmanager.cminds.com/" target="new">here</a>
     <br /><br />
-    <h3>Premium Plugins by CreativeMinds</h3>
-    <ul>
-        <li><a href="http://tooltip.cminds.com/" target="new">CM Enhanced ToolTip Glossary Pro</a> - Parses posts for defined glossary terms and adds links to the static glossary page containing the definition and a tooltip with the definition.</li>
-        <li><a href="http://answers.cminds.com/" target="new">CM Answers Pro</a> - Allow users to post questions and answers in stackoverflow style.</li>
-        <li><a href="http://http://downloadsmanager.cminds.com/" target="new">CM Download Manager Pro</a> - Allow users to upload and manage Downloads in a directory structure for others users to use and comment.</li>
-    </ul>
-    <h3>Free Plugins by CreativeMinds</h3>
-    <ul>
-        <li><a href="http://wordpress.org/extend/plugins/enhanced-tooltipglossary/" target="new">CM Enhanced ToolTip Glossary</a> - Parses posts for defined glossary terms and adds links to the static glossary page containing the definition and a tooltip with the definition.</li>
-        <li><a href="http://wordpress.org/extend/plugins/cm-answers/" target="new">CM Answers</a> - Allow users to post questions and answers in stackoverflow style.</li>
-        <li><a href="http://wordpress.org/extend/plugins/cm-download-manager" target="new">CM Download Manager</a> - Allow users to upload and manage Downloads in a directory structure for others users to use and comment.</li>
-        <li><a href="http://wordpress.org/extend/plugins/multi-mailchimp-list-manager/" target="new">CM Multi MailChimp List Manager</a> - Allows users to subscribe/unsubscribe from multiple MailChimp lists. </li>
-        <li><a href="http://wordpress.org/extend/plugins/cm-invitation-codes/" target="new">CM Invitation Codes</a> - Allows more control over site registration by adding managed groups of invitation codes.</li>
-        <li><a href="http://wordpress.org/extend/plugins/cm-email-blacklist/" target="new">CM Email Blacklist</a> - Block users from blacklists domain from registering to your WordPress site.</li>
-    </ul>
-    <br />
+ <h3>Premium Plugins by CreativeMinds</h3>
+<ul>
+<li><a href="http://tooltip.cminds.com/" target="_blank">CM Enhanced ToolTip Glossary Pro</a> - Parses posts for defined glossary terms and adds links to the static glossary page containing the definition and a tooltip with the definition.</li> 
+<li><a href="http://answers.cminds.com/" target="_blank">CM Answers Pro</a> - Allow users to post questions and answers in stackoverflow style.</li>
+<li><a href="http://http://downloadsmanager.cminds.com/" target="_blank">CM Download Manager Pro</a> - Allow users to upload and manage Downloads in a directory structure for others users to use and comment.</li>
+<li><a href="http://ad-changer.cminds.com/" target="_blank">CM Ad Changer Pro</a> - Manage, Track and Report Advertising Campaigns Across Sites. Can turn your Turn your WP into an Ad Server.</li> 
+</ul>
+<h3>Free Plugins by CreativeMinds</h3>
+<ul>
+<li><a href="http://wordpress.org/extend/plugins/enhanced-tooltipglossary/" target="_blank">CM Enhanced ToolTip Glossary</a> - Parses posts for defined glossary terms and adds links to the static glossary page containing the definition and a tooltip with the definition.</li> 
+<li><a href="http://wordpress.org/extend/plugins/cm-answers/" target="_blank">CM Answers</a> - Allow users to post questions and answers in stackoverflow style.</li>
+<li><a href="http://wordpress.org/extend/plugins/cm-download-manager" target="_blank">CM Download Manager</a> - Allow users to upload and manage Downloads in a directory structure for others users to use and comment.</li>
+<li><a href="http://wordpress.org/plugins/cm-ad-changer/" target="_blank">CM Ad Changer Pro</a> - Manage, Track and Report Advertising Campaigns Across Sites. Can turn your Turn your WP into an Ad Server.</li> 
+<li><a href="http://wordpress.org/extend/plugins/multi-mailchimp-list-manager/" target="_blank">CM Multi MailChimp List Manager</a> - Allows users to subscribe/unsubscribe from multiple MailChimp lists. </li>
+<li><a href="http://wordpress.org/extend/plugins/cm-invitation-codes/" target="_blank">CM Invitation Codes</a> - Allows more control over site registration by adding managed groups of invitation codes.</li>
+<li><a href="http://wordpress.org/extend/plugins/cm-email-blacklist/" target="_blank">CM Email Blacklist</a> - Block users from blacklists domain from registering to your WordPress site.</li>
+</ul>
+<br />
+ 
     <h3>We Are Experts in Custom Plugin Development</h3>
     <ul>
         <li><strong>Professional Quality Work </strong>- We follow a detailed coding standard that ensures we deliver only the highest quality products and services. You can count on maintainable code that fulfills your requirements completely.</li><br>
