--- a/views/frontend/cmdownload/meta/support.phtml
+++ b/views/frontend/cmdownload/meta/support.phtml
@@ -29,7 +29,7 @@ $currentPage = 1;
 <!--/paging -->
 <script>
 </script>
-<?php  if ( is_user_logged_in() ) {  ?>
+<?php  if ( is_user_logged_in() && !empty($post) ) {  ?>
 <div class="boxWhite694">
     <form id="addThreadForm" action="<?php the_permalink($post->ID); ?>/topic/add" method="post" style="position:relative">
         <h5><?php _e('Leave your comment/question', 'cm-download-manager'); ?></h5>
