--- a/views/backend/settings.phtml
+++ b/views/backend/settings.phtml
@@ -6,6 +6,15 @@
         endforeach;
     endif;
     ?>
+	
+	<?php
+// check permalink settings 
+if (get_option('permalink_structure') == '') {
+      echo '<span style="color:red">Your WordPress Permalinks needs to be set to allow plugin to work correctly. Please Go to <a href="'.admin_url().'options-permalink.php" target="new">Settings->Permalinks</a> to set Permalinks to Post Name.</span><br><br>';
+}
+
+?>
+
     <h3>Upgrade to Pro</h3>
     <table>
         <tr>
