--- a/views/frontend/cmdownload/index.phtml
+++ b/views/frontend/cmdownload/index.phtml
@@ -130,6 +130,7 @@ get_header();
         </div>
         <!--/main -->
         <span class="cma_poweredby"><a href="http://plugins.cminds.com/" target="_new" class="cma_poweredbylink">CreativeMinds WordPress Plugins</a> <a href="http://downloadsmanager.cminds.com" target="_new" class="cma_poweredbylink">CM Downloads Manager</a></span>
+        <div class="clear"></div>
     </div>
 </div>
 <div class="clear"></div>
