--- a/views/frontend/cmdownload/single.phtml
+++ b/views/frontend/cmdownload/single.phtml
@@ -65,6 +65,7 @@ if( have_posts() ):
                     <?php dynamic_sidebar('cm-download-manager-sidebar'); ?>
                 </div>
                 <!--/aside -->
+                <div class="clear"></div>
             </div>
             <!-- javascript coding -->
             <?php
