--- a/views/frontend/cmdownload/meta/support.phtml
+++ b/views/frontend/cmdownload/meta/support.phtml
@@ -30,11 +30,12 @@ $currentPage = 1;
 <script>
 </script>
 <?php
-if( is_user_logged_in() && !empty($post) )
+if( is_user_logged_in())
 {
+	
     ?>
     <div class="boxWhite694">
-        <form id="addThreadForm" action="<?php the_permalink($post->ID); ?>/topic/add" method="post" style="position:relative">
+        <form id="addThreadForm" action="<?php the_permalink($downloadId); ?>/topic/add" method="post" style="position:relative">
             <h5><?php _e('Leave your comment/question', 'cm-download-manager'); ?></h5>
             <ul class="CMDM_error" style="display:none"></ul>
             <ul class="notes">
